DigIt CHANGE LOG
======================

2025/02/27 Introduced use of Path based Session:
             XML_Load/Save use Path_Session as base Path;
	     Added Session Paths to Bridge;
	     Sources use Path_Session_Temp as temp Path;
	     Renamed xml/thumb files to digs,digt;
	     Renamed Project actions to Work Session;
        26 Use of BGRAImageFormat Writer intestead of Ext;
	   Updated Dest Save Files Settings Form;
	   Added PDF Info Form;
	   Updated Version Info and Setup;
        25 Tested and fixed user cancel operations;
           Added TDigIt_Progress OnCancelClick event and IDigIt_Progress.Cancelled;
        24 LoadSaveWork in separate methods;
	   Captured Files Toolbar placed above the list horizontally;
	   Eliminated redundant Session Saves;
        21 Added Captured Toolbar Actions Enabled; 
           Added Captured Toolbar Delete/DeleteAll; 
        20 UI Adjustments; Load/SaveWork Dialog=mrNo delete the xml and thumbs file
        07 Added Linux Project (Gtk2);
	   GUI Adjustments for Gtk2 support;
2024/12/
        20 Use of CapturedFiles Array;
	   Deleted OwnerDraw in lvCaptured;
	   Use of ImageList Add/InsertProportionally for Thumbnails;
	   Load/Save Thumbnails from a file;
	   Adjustments in GoBack/SaveCallback indexes;
	   Updated Folder Source;
	   Updated Twain Source to use Download;
	   Updated Twain 32bit Server to use Download;

        12 First Porting of Source_Twain to new interfaces structure;
	   Added Drivers file for WSD Scanners;
        06 Commented Destinations (until I think how);
	   Deleted all code with my allocation of PChars in the interfaces;
	   Added Value_Next in Counter and use it in MainForm;
	   Cleaning residual code;
	   UI adjustments due to longer Italian words.
        05 Use resourcestring for Languages support; Some UI adjustments
        04 Added PDF Export
        02 Moved Select of Source/Destination from MainForm to Bridge Implementation;