@@ -4126,6 +4126,7 @@ object DigIt_Main: TDigIt_Main
     object itemCropModeCustom: TMenuItem
       Tag = 1
       Caption = 'Custom'
+      Enabled = False
       ImageIndex = 1
       OnClick = itemCropModeClick
     end
